1999-01-29  Stefan Taferner  <taferner@kde.org> (KMail-1.0.15)

	* Bugfix: disabled deleting of system folders.

	* Removed save button in composer which is still not
	implemented ;->

	* Bugfix: disabled renaming of system folders (inbox, outbox,
	sent-mails, trash).

	* Fix: improved performance when displaying messages (Bug #148).
	
	* Bugfix: fixed crash when dropping message on directory
	entry in folder list.

	* Improved: email completion of composer (Ctrl-t) now
	searches for appearance of given characters in addressbook's
	list. Up to now only used beginning of string.

	* Added missing i18n() around "Spellcheck complete" in
	composer.

	* Bugfix: Added %_ in composer settings, e.g. for indentation 
	template, to add a space at the end. Added %f which expands
	to the two first characters of the name in the email address.

	* Bugfix: Indentation template (see composer settings) now 
	supports the same wildcards as the other fields, e.g. "%f>%_"

1999-01-28  Stefan Taferner  <taferner@kde.org>

	* Bugfix: kmail hangs when sending large messages via
	SMTP. Actually was a performance issue with QRegExp.
	
	* Bugfix: main window was hidden upon press of Ok button
	in settings dialog.

1999-01-25  Stefan Taferner  <taferner@kde.org>

	* Bugfix: 'From' column did not update new text at
	first.

1999-01-23  Stefan Taferner  <taferner@kde.org> (KMail-1.0.14)

	* New feature: layout can now be switched between
	"long folder list" and "short folder list". Option
	setable in settings->appearance.
	
	* New feature: the "From" column now contains the
	receiver for the folders outbox and sent-mail. Column
	"Sender" automatically switches it's title to "Receiver"
	for these folders.
	
	* Incorporated new documentation.

1999-01-21  Stefan Taferner  <taferner@kde.org> (KMail-1.0.13)

	* Fixed broken placement of contents in settings dialog.

	* Filter Dialog: changed combo box style to new style.
	Now it is possible to have more folders than the screen