@@ -1,3 +1,10 @@
+1999-01-30  Stefan Taferner  <taferner@kde.org> (KMail-1.0.16)
+
+	* Removed obsolete / commented-out code.
+
+	* Bugfix: KMail now properly handles the 'filename' attribute
+	of message parts in the reader.
+
 1999-01-29  Stefan Taferner  <taferner@kde.org> (KMail-1.0.15)
 
 	* Bugfix: disabled deleting of system folders.
